k8s/thanos/thanos-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-query
  namespace: thanos
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`thanos-query.cuiliangblog.cn`)
    kind: Rule
    services:
      - name: thanos-query
        port: 9090
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-store
  namespace: thanos
spec:
  entryPoints:
  - web
  routes:
    - match: Host(`thanos-store.cuiliangblog.cn`)
      kind: Rule
      services:
        - name: thanos-store
          port: 10902
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: thanos-receive
  namespace: thanos
spec:
  entryPoints:
  - web
  routes:
    - match: Host(`thanos-receive.cuiliangblog.cn`)
      kind: Rule
      services:
        - name: thanos-receive-router
          port: 10902
